# CodeToLLMContext

./: .gitignore  LICENSE  README.md  code_context_generator.py  gui.py  main.py  pyproject.toml  settings.py
