[project]
name = "LlmCodeSharer"
version = "1.0.0"
description = "Extract your code, ready to be pasted to an online llm to create the prompt + context you need."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.14.1",
    "pyperclip>=1.9.0",
    "questionary>=2.1.0",
    "textual>=3.5.0",
    "tk>=0.1.0",
]
